--- a/Website/Martin-Linux/package.json
+++ b/Website/Martin-Linux/package.json
@@ -31,8 +31,14 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.3",
+    "@ng-icons/core": "^31.4.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "express": "^5.1.0",
+    "flowbite-angular": "^20.1.1",
+    "ng-primitives": "^0.88.0",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.17",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
